adding pre commit checks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,13 @@
     repo: https://github.com/operatehappy/pre-commit-packer
     rev: 1.0.0
     hooks:
+      - id: packer-validate
+        files: packer*.json
+        args: ['-var-file=variables.json']
+
+      - id: packer-fix
+        files: packer*.json
+        args: ['-var-file=variables.json']
 
       - id: packer-validate-and-fix
         files: packer*.json
